Senior_Project/src/senior/project/test/server/errors/ServerInvalidGoalTypeException.java
package senior.project.test.server.errors;

/**
 *
 * @author Paul Jones
 */
public class ServerInvalidGoalTypeException extends ServerRuntimeException {

  public ServerInvalidGoalTypeException(String msg) {
    super(msg);
  }
}
